crates/reinhardt-core/macros/tests/ui/settings/fail/composition_include_and_exclude_same.rs
use reinhardt_macros::settings;

#[settings(core: CoreSettings | !CoreSettings)]
pub struct BadSettings;

fn main() {}
